[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
serde_json = "1.0.78"
serde = { version="1.0.136" , features = ["derive"]}
sha3 = "0.10.0"
uuid = { version="1.0.0-alpha.1", features = ["serde", "v4"]}
lib = { path = "../lib" }